	* dix/dispatch.c:
	* dix/extension.c:
	* dix/property.c:
	* dix/swaprep.c:
	* include/dix.h:
	* include/dix-config.h:
	* include/dixstruct.h:
	* include/globals.h:
	* include/os.h:
	* include/propertyst.h:
	* include/swaprep.h:
	* lbx/*:
	* mi/miinitext.c:
	* os/Makefile.am:
	* os/access.c:
	* os/connection.c:
	* os/io.c:
	* os/lbxio.c:
	* os/osdep.h:
	* os/utils.c:
	Remove LBX.  Goodbye.

2006-05-30  Matthieu Herrb <matthieu.herrb@laas.fr>

	* hw/xfree86/os-support/bsd/Makefile.am:
	Powerpc machines also need ioperm_noop.c

2006-05-30  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/doc/man/xorg.conf.man.pre:
	Properly document the DPMS, SyncOnGreen, and TargetRefresh options.

2006-05-29  Kristian Høgsberg  <krh@redhat.com>

	* GL/glx/glxcmds.c: Remove superfluous definition of tfp tokens.

2005-05-24  Daniel Stone  <daniel@freedesktop.org>

	* xkb/ddxKillSrv.c:
	* xkb/ddxPrivate.c:
	* xkb/ddxVT.c:
	Minor #include cleanups.

	* xkb/xkb.c:
	* xkb/xkbUtils.c:
	* hw/xfree86/common/xf86Config.c:
	* hw/xfree86/common/xf86Io.c:
	* hw/xfree86/os-support/sysv/xqueue.c:
	* hw/xnest/Keyboard.c:
	* hw/kdrive/src/kinput.c:
	* hw/xgl/egl/kinput.c:
	* hw/dmx/input/dmxinputinit.c:
	* hw/xgl/glx/xglx.c:
	* hw/xwin/winconfig.c:
	* hw/xwin/winkeybd.c:
	Remove -xkbmap argument.

2006-05-26  Matthieu Herrb <matthieu.herrb@laas.fr>

	* hw/xfree86/os-support/bsd/bsd_mouse.c:
	check buffersize before reading next char, fixes the 
	"mouse stuck at left" bug (bugzilla #3113) for BSD systems using 
	wscons. (Dale Rahn).

2006-05-25  Jeremy C. Reed  <reed@reedmedia.net>

	* doc/Xserver.man.pre:
	* hw/xfree86/doc/man/Xorg.man.pre:
	* hw/xfree86/doc/man/xorg.conf.man.pre:
	RGB color database and XErrorDB install to "share" not
	"lib" by default (by app/rgb and libX11). (TODO: They are
	customizable, so maybe cpprules.in should be extended.)

2006-05-25  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Adam Jackson

	* hw/xfree86/common/xf86Config.c: (GenerateDriverlist):